-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b96
Sample hs_err:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x0000000108203b54, pid=65541, tid=27907
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151105142043.shade.8140389-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20151105142043.shade.8140389-b00, mixed mode, tiered, compressed oops, g1 gc, bsd-amd64)
# Problematic frame:
# V [libjvm.dylib+0x7f0b54] MethodMatcher::matches(methodHandle) const+0x64
#
# Core dump will be written. Default location: /cores/core.65541
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Current CompileTask:
C2: 1113 407 4 java.util.Arrays::copyOf (19 bytes)
Stack: [0x00000001267db000,0x00000001268db000], sp=0x00000001268da830, free space=1022k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x7f0b54] MethodMatcher::matches(methodHandle) const+0x64
V [libjvm.dylib+0x7f0dc1] BasicMatcher::match(methodHandle)+0x41
V [libjvm.dylib+0x37d198] CompilerDirectives::match(methodHandle)+0x3e
V [libjvm.dylib+0x3804ab] DirectivesStack::getMatchingDirective(methodHandle, AbstractCompiler*)+0xcf
V [libjvm.dylib+0x374574] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x16c
V [libjvm.dylib+0x3740c4] CompileBroker::compiler_thread_loop()+0x258
V [libjvm.dylib+0x97ebf3] JavaThread::thread_main_inner()+0x175
V [libjvm.dylib+0x97e93d] JavaThread::run()+0x375
V [libjvm.dylib+0x82fea2] java_start(Thread*)+0xf2
C [libsystem_pthread.dylib+0x1899] _pthread_body+0x8a
C [libsystem_pthread.dylib+0x172a] _pthread_struct_init+0x0
C [libsystem_pthread.dylib+0x5fc9] thread_start+0xd
Test passes on re-run, so it looks intermittent.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x0000000108203b54, pid=65541, tid=27907
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151105142043.shade.8140389-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20151105142043.shade.8140389-b00, mixed mode, tiered, compressed oops, g1 gc, bsd-amd64)
# Problematic frame:
# V [libjvm.dylib+0x7f0b54] MethodMatcher::matches(methodHandle) const+0x64
#
# Core dump will be written. Default location: /cores/core.65541
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Current CompileTask:
C2: 1113 407 4 java.util.Arrays::copyOf (19 bytes)
Stack: [0x00000001267db000,0x00000001268db000], sp=0x00000001268da830, free space=1022k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x7f0b54] MethodMatcher::matches(methodHandle) const+0x64
V [libjvm.dylib+0x7f0dc1] BasicMatcher::match(methodHandle)+0x41
V [libjvm.dylib+0x37d198] CompilerDirectives::match(methodHandle)+0x3e
V [libjvm.dylib+0x3804ab] DirectivesStack::getMatchingDirective(methodHandle, AbstractCompiler*)+0xcf
V [libjvm.dylib+0x374574] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x16c
V [libjvm.dylib+0x3740c4] CompileBroker::compiler_thread_loop()+0x258
V [libjvm.dylib+0x97ebf3] JavaThread::thread_main_inner()+0x175
V [libjvm.dylib+0x97e93d] JavaThread::run()+0x375
V [libjvm.dylib+0x82fea2] java_start(Thread*)+0xf2
C [libsystem_pthread.dylib+0x1899] _pthread_body+0x8a
C [libsystem_pthread.dylib+0x172a] _pthread_struct_init+0x0
C [libsystem_pthread.dylib+0x5fc9] thread_start+0xd
Test passes on re-run, so it looks intermittent.