8141585: CompilerDirectivesDCMDTest intermittently SEGVs in MethodMatcher::matcher

Missing methodHandle and read before lock

Reviewed-by: twisti